--- a/packages/radio-player/package.json
+++ b/packages/radio-player/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@internetarchive/radio-player",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "A Radio Player LitElement.",
   "license": "AGPL-3.0-only",
   "main": "index.js",
@@ -34,13 +34,13 @@
     "storybook:build": "build-storybook -o _site -s storybook-static"
   },
   "dependencies": {
-    "@internetarchive/audio-element": "0.0.1-alpha.530",
-    "@internetarchive/expandable-search-bar": "0.0.1-alpha.530",
-    "@internetarchive/ia-activity-indicator": "0.0.1-alpha.521",
-    "@internetarchive/playback-controls": "0.0.1-alpha.530",
-    "@internetarchive/scrubber-bar": "0.0.1-alpha.530",
-    "@internetarchive/transcript-view": "0.0.1-alpha.504",
-    "@internetarchive/waveform-progress": "0.0.1-alpha.530",
+    "@internetarchive/audio-element": "^0.0.1",
+    "@internetarchive/expandable-search-bar": "^0.0.1",
+    "@internetarchive/ia-activity-indicator": "^0.0.1",
+    "@internetarchive/playback-controls": "^0.0.1",
+    "@internetarchive/scrubber-bar": "^0.0.1",
+    "@internetarchive/transcript-view": "^0.0.1",
+    "@internetarchive/waveform-progress": "^0.0.1",
     "lit-element": "^2.2.1",
     "lit-html": "^1.0.0"
   },
