Fix Radio Player Tests
The version of `karma-esm` we had installed had a bug where it did not pass the `preserveSymlinks` flag through to the `es-dev-server` when tests were running.

This caused tests to fail when the dependencies were symlinked, such as through `lerna bootstrap`.

This sets the `preserveSymlinks` flag and updates `karma-esm`.

--- a/packages/radio-player/package.json
+++ b/packages/radio-player/package.json
@@ -47,6 +47,7 @@
   "devDependencies": {
     "@open-wc/demoing-storybook": "^0.3.0",
     "@open-wc/eslint-config": "^1.0.0",
+    "@open-wc/karma-esm": "^2.16.11",
     "@open-wc/prettier-config": "^0.1.10",
     "@open-wc/testing": "^2.0.0",
     "@open-wc/testing-karma": "^3.0.0",
