--- a/packages/radio-player/package.json
+++ b/packages/radio-player/package.json
@@ -58,6 +58,7 @@
     "@typescript-eslint/eslint-plugin": "^2.26.0",
     "@typescript-eslint/parser": "^2.26.0",
     "concurrently": "^4.1.2",
+    "deepmerge": "^4.2.2",
     "es-dev-server": "^1.5.0",
     "eslint": "^6.8.0",
     "gulp": "^4.0.2",
@@ -65,8 +66,7 @@
     "karma-coverage": "^2.0.1",
     "lint-staged": "^8.0.0",
     "polymer-cli": "^1.9.11",
-    "typescript": "^3.8.3",
-    "webpack-merge": "^4.1.5"
+    "typescript": "^3.8.3"
   },
   "eslintConfig": {
     "extends": [
