--- a/packages/lazy-loader-service/package.json
+++ b/packages/lazy-loader-service/package.json
@@ -29,8 +29,7 @@
     "test:compatibility:watch": "karma start --compatibility all --auto-watch=true --single-run=false",
     "test:bs": "karma start karma.bs.config.js --compatibility all --coverage"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "@open-wc/eslint-config": "^1.0.0",
     "@open-wc/prettier-config": "^0.1.10",
@@ -38,16 +37,16 @@
     "@open-wc/testing-karma": "^3.0.0",
     "@open-wc/testing-karma-bs": "^1.0.0",
     "@types/form-data": "^2.5.0",
-    "@typescript-eslint/eslint-plugin": "^2.26.0",
-    "@typescript-eslint/parser": "^2.26.0",
+    "@typescript-eslint/eslint-plugin": "^3.3.0",
+    "@typescript-eslint/parser": "^3.3.0",
     "concurrently": "^4.1.2",
     "es-dev-server": "^1.5.0",
-    "lit-html": "^1.0.0",
-    "eslint": "^6.8.0",
+    "eslint": "^7.2.0",
     "gulp": "^4.0.2",
     "husky": "^1.0.0",
     "karma-coverage": "^2.0.1",
     "lint-staged": "^8.0.0",
+    "lit-html": "^1.0.0",
     "polymer-cli": "^1.9.11",
     "typescript": "^3.9.5",
     "webpack-merge": "^4.1.5"
