--- a/package.json
+++ b/package.json
@@ -5,13 +5,19 @@
   },
   "name": "iaux",
   "license": "AGPL-3.0-only",
+  "scripts": {
+    "test:browser": "karma start --coverage"
+  },
   "devDependencies": {
+    "@open-wc/testing-karma": "^3.4.4",
+    "deepmerge": "^4.2.2",
     "eslint": "^5.12.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jest": "^22.1.3",
     "eslint-plugin-jsx-a11y": "^6.1.2",
-    "eslint-plugin-react": "^7.12.3"
+    "eslint-plugin-react": "^7.12.3",
+    "webpack": "^4.43.0"
   }
 }
