--- a/packages/expandable-search-bar/package.json
+++ b/packages/expandable-search-bar/package.json
@@ -26,7 +26,7 @@
     "format:prettier": "prettier \"**/*.ts\" --write --ignore-path .gitignore",
     "lint": "npm run lint:eslint && npm run lint:prettier",
     "format": "npm run format:eslint && npm run format:prettier",
-    "test": "npm run build && karma start --coverage",
+    "test": "npm run build && cd ../../ && yarn test:browser --grep \"packages/expandable-search-bar/test/**/*.test.js\" --coverage",
     "test:watch": "karma start --auto-watch=true --single-run=false",
     "test:update-snapshots": "karma start --update-snapshots",
     "test:prune-snapshots": "karma start --prune-snapshots",
