--- a/packages/ia-activity-indicator/package.json
+++ b/packages/ia-activity-indicator/package.json
@@ -19,7 +19,7 @@
     "format:prettier": "prettier \"**/*.js\" --write --ignore-path .gitignore",
     "lint": "npm run lint:eslint && npm run lint:prettier",
     "format": "npm run format:eslint && npm run format:prettier",
-    "test": "npm run lint && karma start --coverage",
+    "test": "npm run lint && cd ../../ && yarn test:browser --grep \"packages/ia-activity-indicator/test/**/*.test.js\" --coverage",
     "test:watch": "karma start --auto-watch=true --single-run=false",
     "storybook": "start-storybook --node-resolve --watch --open",
     "storybook:build": "build-storybook"
