--- a/packages/donation-form/package.json
+++ b/packages/donation-form/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "@internetarchive/ia-activity-indicator": "^0.0.1",
+    "@internetarchive/lazy-loader-service": "0.0.1-alpha.564",
     "currency.js": "^1.2.2",
     "lit-element": "^2.2.1",
     "lit-html": "^1.0.0"
