--- a/packages/lazy-loader-service/package.json
+++ b/packages/lazy-loader-service/package.json
@@ -61,6 +61,11 @@
   "publishConfig": {
     "access": "public"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "lint-staged": {
     "*.ts": [
       "eslint --fix",
