Test setting lerna's test concurrency to fix tests

--- a/lerna.json
+++ b/lerna.json
@@ -3,5 +3,10 @@
     "packages/*"
   ],
   "version": "independent",
-  "npmClient": "yarn"
+  "npmClient": "yarn",
+  "command": {
+    "run": {
+      "concurrency": 1
+    }
+  }
 }
