--- a/packages/ia-details-action-button/package.json
+++ b/packages/ia-details-action-button/package.json
@@ -28,7 +28,12 @@
     "storybook:build": "build-storybook -o _site -s storybook-static"
   },
   "dependencies": {
-    "lit-element": "^2.2.1"
+    "@internetarchive/icon-email": "^1.1.3",
+    "@internetarchive/icon-favorite": "^0.3.1-alpha.4",
+    "@internetarchive/icon-share": "^1.1.3",
+    "@internetarchive/icon-flag": "^0.3.1-alpha.4",
+    "lit-element": "^2.2.1",
+    "lit-html": "^1.2.1"
   },
   "devDependencies": {
     "@open-wc/demoing-storybook": "^0.3.0",
