--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ install:
   - npm install -g codecov
 
 script:
-  - lerna bootstrap
+  - travis_wait lerna bootstrap
   - lerna run test
 
 after_success:
