--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -20,7 +20,7 @@ jobs:
       with:
         node-version: 14.x
     - run: npm install && npm install -g codecov
-    - run: lerna bootstrap
+    - run: lerna bootstrap --hoist
     - run: lerna run test && codecov
 
 # TODO: Get slack notifications working (this is from our old travis.yml)
