--- a/packages/ia-components/.babelrc
+++ b/packages/ia-components/.babelrc
@@ -2,6 +2,7 @@
     "presets": [
         [
           "@babel/env", {
+            "loose": true,
             "targets": {
               "node": "current"
             }
@@ -10,7 +11,9 @@
         "@babel/preset-react"
     ],
     "plugins": [
-        "@babel/plugin-proposal-class-properties",
+        ["@babel/plugin-proposal-class-properties", { "loose": true }],
+        ["@babel/plugin-proposal-private-methods", { "loose": true }],
+        ["@babel/plugin-proposal-private-property-in-object", { "loose": true }],
         "@babel/plugin-proposal-object-rest-spread",
         [
           "@babel/plugin-transform-runtime",
