--- a/packages/ia-components/package.json
+++ b/packages/ia-components/package.json
@@ -1,58 +1,62 @@
 {
-    "name": "@internetarchive/ia-components",
-    "version": "0.0.7",
-    "source": true,
-    "license": "AGPL-3.0-only",
-    "scripts": {
-        "postversion": "node scripts/postversion.js",
-        "storybook": "node bin/copy_bookreader.js && yarn run test:generate-output && yarn run storybook:start",
-        "storybook:start": "start-storybook -p 9001 -c .storybook -s ./public",
-        "test:generate-output": "mkdir jest-test-utils && jest --json --outputFile=jest-test-utils/jest-test-results.json || true",
-        "test:update-snapshots": "jest --updateSnapshot",
-        "test": "start-server-and-test storybook http-get://localhost:9001 'jest --updateSnapshot --coverage'",
-        "test:watch": "yarn run test --watch",
-        "test:integration": "node_modules/.bin/jest --config integration/jest.config.js",
-        "version": "node scripts/version.js"
-    },
-    "devDependencies": {
-        "@babel/core": "^7.2.2",
-        "@babel/plugin-proposal-class-properties": "^7.3.4",
-        "@babel/plugin-proposal-object-rest-spread": "^7.3.4",
-        "@babel/plugin-transform-runtime": "^7.5.5",
-        "@babel/runtime": "^7.5.5",
-        "@internetarchive/ia-js-client": "0.0.0-alpha.350",
-        "@storybook/addon-a11y": "4.2.0-alpha.10",
-        "@storybook/addon-jest": "^4.1.6",
-        "@storybook/addon-knobs": "^4.1.4",
-        "@storybook/react": "^4.1.4",
-        "axios": "^0.19.0",
-        "babel-loader": "^8.0.5",
-        "@internetarchive/bookreader": "4.15.0",
-        "chromedriver": "^78.0.0",
-        "css-loader": "^2.1.0",
-        "http-proxy-middleware": "^1.0.3",
-        "jest": "^24.7.1",
-        "less": "^3.8.1",
-        "less-loader": "^4.1.0",
-        "react-test-renderer": "^16.7.0",
-        "selenium-webdriver": "^4.0.0-alpha.4",
-        "start-server-and-test": "^1.10.6",
-        "storybook-addon-jsx": "^6.0.0",
-        "style-loader": "^0.23.1"
-    },
-    "dependencies": {
-        "@stratumn/canonicaljson": "^1.0.3",
-        "debug": "^4.1.1",
-        "lodash": "^4.17.19",
-        "prettier-bytes": "^1.0.4",
-        "prop-types": "^15.6.2",
-        "react": "^16.7.0",
-        "react-dom": "^16.7.0"
-    },
-    "optionalDependencies": {
-        "fsevents": "^1.2.4"
-    },
-    "publishConfig": {
-        "access": "public"
-    }
+  "name": "@internetarchive/ia-components",
+  "version": "0.0.7",
+  "source": true,
+  "license": "AGPL-3.0-only",
+  "scripts": {
+    "postversion": "node scripts/postversion.js",
+    "storybook": "start-storybook -p 6006",
+    "test:generate-output": "mkdir jest-test-utils && jest --json --outputFile=jest-test-utils/jest-test-results.json || true",
+    "test:update-snapshots": "jest --updateSnapshot",
+    "test": "start-server-and-test storybook http-get://localhost:9001 'jest --updateSnapshot --coverage'",
+    "test:watch": "yarn run test --watch",
+    "test:integration": "node_modules/.bin/jest --config integration/jest.config.js",
+    "version": "node scripts/version.js"
+  },
+  "devDependencies": {
+    "@babel/compat-data": "^7.13.11",
+    "@babel/core": "^7.13.10",
+    "@babel/plugin-proposal-class-properties": "^7.3.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.3.4",
+    "@babel/plugin-proposal-private-property-in-object": "^7.13.0",
+    "@babel/plugin-transform-runtime": "^7.5.5",
+    "@babel/preset-env": "^7.13.10",
+    "@babel/runtime": "^7.5.5",
+    "@internetarchive/bookreader": "^4.37.0",
+    "@internetarchive/ia-js-client": "0.0.0-alpha.350",
+    "@storybook/addon-actions": "^6.1.21",
+    "@storybook/addon-essentials": "^6.1.21",
+    "@storybook/addon-jest": "^4.1.6",
+    "@storybook/addon-links": "^6.1.21",
+    "@storybook/react": "^6.1.21",
+    "axios": "^0.19.0",
+    "babel-loader": "^8.2.2",
+    "chromedriver": "^78.0.0",
+    "css-loader": "^2.1.0",
+    "http-proxy-middleware": "^1.0.3",
+    "jest": "^24.7.1",
+    "less": "^3.8.1",
+    "less-loader": "^4.1.0",
+    "react-test-renderer": "^16.7.0",
+    "selenium-webdriver": "^4.0.0-alpha.4",
+    "start-server-and-test": "^1.10.6",
+    "storybook-addon-jsx": "^7.3.6",
+    "style-loader": "^0.23.1",
+    "webpack": "^5.26.3"
+  },
+  "dependencies": {
+    "@stratumn/canonicaljson": "^1.0.3",
+    "debug": "^4.1.1",
+    "lodash": "^4.17.19",
+    "prettier-bytes": "^1.0.4",
+    "prop-types": "^15.6.2",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0"
+  },
+  "optionalDependencies": {
+    "fsevents": "^1.2.4"
+  },
+  "publishConfig": {
+    "access": "public"
+  }
 }
