--- a/packages/ia-topnav/package.json
+++ b/packages/ia-topnav/package.json
@@ -30,8 +30,7 @@
   },
   "dependencies": {
     "@internetarchive/ia-wayback-search": "0.2.1",
-    "lit-element": "^2.2.1",
-    "lit-html": "^1.0.0"
+    "lit": "^2.0.0"
   },
   "devDependencies": {
     "@open-wc/demoing-storybook": "^0.3.0",
