Update ia-wayback-search to lit2

--- a/packages/ia-wayback-search/package.json
+++ b/packages/ia-wayback-search/package.json
@@ -28,7 +28,7 @@
     "storybook:build": "build-storybook -o _site -s storybook-static"
   },
   "dependencies": {
-    "lit-element": "^2.2.1"
+    "lit": "^2.0.2"
   },
   "devDependencies": {
     "@open-wc/demoing-storybook": "^0.3.0",
