--- a/packages/ia-wayback-search/package.json
+++ b/packages/ia-wayback-search/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@internetarchive/ia-wayback-search",
-  "version": "0.2.1",
+  "version": "0.2.2-alpha.1",
   "description": "Wayback search form component",
   "license": "AGPL-3.0-only",
   "main": "index.js",
