--- a/packages/ia-topnav/package.json
+++ b/packages/ia-topnav/package.json
@@ -29,9 +29,8 @@
     "storybook:build": "build-storybook -o _site -s storybook-static"
   },
   "dependencies": {
-    "@internetarchive/ia-wayback-search": "0.2.1",
-    "lit-element": "^2.2.1",
-    "lit-html": "^1.0.0"
+    "@internetarchive/ia-wayback-search": "0.2.2-alpha.1",
+    "lit": "^2.0.2"
   },
   "devDependencies": {
     "@open-wc/demoing-storybook": "^0.3.0",
