--- a/packages/ia-topnav/package.json
+++ b/packages/ia-topnav/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@internetarchive/ia-topnav",
-  "version": "1.1.15",
+  "version": "1.1.16",
   "description": "Top nav for Internet Archive",
   "license": "AGPL-3.0-only",
   "main": "index.js",
@@ -29,9 +29,8 @@
     "storybook:build": "build-storybook -o _site -s storybook-static"
   },
   "dependencies": {
-    "@internetarchive/ia-wayback-search": "0.2.1",
-    "lit-element": "^2.2.1",
-    "lit-html": "^1.0.0"
+    "@internetarchive/ia-wayback-search": "^0.2.2",
+    "lit": "^2.0.2"
   },
   "devDependencies": {
     "@open-wc/demoing-storybook": "^0.3.0",
