--- a/packages/ia-activity-indicator/package.json
+++ b/packages/ia-activity-indicator/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@internetarchive/ia-activity-indicator",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Webcomponent ia-activity-indicator following open-wc recommendations",
   "author": "ia-activity-indicator",
   "license": "MIT",
@@ -25,20 +25,19 @@
     "storybook:build": "build-storybook"
   },
   "dependencies": {
-    "lit-html": "^1.1.2",
-    "lit-element": "^2.2.1"
+    "lit": "^2.0.2"
   },
   "devDependencies": {
-    "es-dev-server": "^1.23.0",
-    "eslint": "^6.1.0",
+    "@open-wc/demoing-storybook": "^1.0.1",
     "@open-wc/eslint-config": "^2.0.0",
     "@open-wc/prettier-config": "^0.1.10",
-    "husky": "^1.0.0",
-    "lint-staged": "^8.0.0",
+    "@open-wc/testing": "^2.0.0",
     "@open-wc/testing-karma": "^3.0.0",
     "deepmerge": "^3.2.0",
-    "@open-wc/testing": "^2.0.0",
-    "@open-wc/demoing-storybook": "^1.0.1"
+    "es-dev-server": "^1.23.0",
+    "eslint": "^6.1.0",
+    "husky": "^1.0.0",
+    "lint-staged": "^8.0.0"
   },
   "eslintConfig": {
     "extends": [
