--- a/packages/ia-components/package.json
+++ b/packages/ia-components/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@internetarchive/ia-components",
-  "version": "0.0.14",
+  "version": "0.0.15-1",
   "source": true,
   "license": "AGPL-3.0-only",
   "scripts": {
