--- a/packages/expandable-search-bar/tsconfig.build.json
+++ b/packages/expandable-search-bar/tsconfig.build.json
@@ -2,6 +2,7 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "allowJs": false,
-    "checkJs": false
+    "checkJs": false,
+    "skipLibCheck": true
   }
 }
