--- a/packages/radio-player/.eslintrc
+++ b/packages/radio-player/.eslintrc
@@ -1,22 +1,37 @@
 {
   "parser": "@typescript-eslint/parser",
   "plugins": ["@typescript-eslint"],
-  "extends": ["plugin:@typescript-eslint/recommended", "../../.eslintrc.json"],
+  "extends": [
+    "plugin:@typescript-eslint/recommended",
+    "@open-wc",
+    "prettier"
+  ],
+  "rules": {
+    "no-unused-vars": "off",
+    "max-classes-per-file": "off",
+    "@typescript-eslint/no-unused-vars": [
+      "error"
+    ],
+    "no-shadow": "off",
+    "@typescript-eslint/no-shadow": [
+      "error"
+    ],
+    "class-methods-use-this": "off",
+    "import/no-unresolved": "off",
+    "import/extensions": [
+      "off",
+      "ignorePackages",
+      {
+        "js": "never",
+        "ts": "never"
+      }
+    ],
+  },
   "settings": {
     "import/resolver": {
       "node": {
         "extensions": [".js", ".jsx", ".ts", ".tsx"]
       }
     }
-  },
-  "rules": {
-    "import/extensions": [
-      "error",
-      "ignorePackages",
-      {
-        "ts": "never",
-        "js": "never"
-      }
-    ]
   }
 }
