--- a/packages/playback-controls/package.json
+++ b/packages/playback-controls/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@internetarchive/playback-controls",
-  "version": "0.0.1",
+  "version": "0.0.2-a1",
   "description": "A Playback Controls LitElement for use in controlling media playback.",
   "license": "AGPL-3.0-only",
   "main": "index.js",
