--- a/packages/ia-zendesk-help-widget/package.json
+++ b/packages/ia-zendesk-help-widget/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@internetarchive/ia-zendesk-help-widget",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "Zendesk Help Widget Component",
   "license": "AGPL-3.0-only",
   "main": "index.js",
@@ -29,7 +29,7 @@
   },
   "dependencies": {
     "@internetarchive/lazy-loader-service": "^0.1.0",
-    "lit-element": "^2.2.1"
+    "lit": "^2.2.7"
   },
   "devDependencies": {
     "@open-wc/demoing-storybook": "^0.3.0",
