--- a/packages/radio-player/package.json
+++ b/packages/radio-player/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@internetarchive/radio-player",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "A Radio Player LitElement.",
   "license": "AGPL-3.0-only",
   "main": "index.js",
@@ -34,39 +34,40 @@
     "storybook:build": "build-storybook -o _site -s storybook-static"
   },
   "dependencies": {
-    "@internetarchive/audio-element": "^0.0.1",
-    "@internetarchive/expandable-search-bar": "^0.0.1",
-    "@internetarchive/ia-activity-indicator": "^0.0.1",
-    "@internetarchive/playback-controls": "^0.0.1",
-    "@internetarchive/scrubber-bar": "^0.0.1",
-    "@internetarchive/transcript-view": "^0.0.2",
-    "@internetarchive/waveform-progress": "^0.0.1",
-    "lit-element": "^2.2.1",
-    "lit-html": "^1.0.0"
+    "@internetarchive/audio-element": "^0.0.2",
+    "@internetarchive/expandable-search-bar": "^0.0.2",
+    "@internetarchive/ia-activity-indicator": "^0.0.3",
+    "@internetarchive/playback-controls": "0.0.2",
+    "@internetarchive/scrubber-bar": "^0.0.2",
+    "@internetarchive/transcript-view": "^0.0.3",
+    "@internetarchive/waveform-progress": "^0.0.2",
+    "lit": "^2.2.7"
   },
   "devDependencies": {
-    "@open-wc/demoing-storybook": "^0.3.0",
-    "@open-wc/eslint-config": "^1.0.0",
-    "@open-wc/karma-esm": "^2.16.11",
+    "@open-wc/eslint-config": "^7.0.0",
     "@open-wc/prettier-config": "^0.1.10",
-    "@open-wc/testing": "^2.0.0",
+    "@open-wc/testing": "^3.1.6",
     "@open-wc/testing-karma": "^3.0.0",
     "@open-wc/testing-karma-bs": "^1.0.0",
-    "@storybook/react": "^5.1.11",
     "@types/form-data": "^2.5.0",
-    "@types/storybook__react": "^4.0.2",
-    "@typescript-eslint/eslint-plugin": "^2.26.0",
-    "@typescript-eslint/parser": "^2.26.0",
+    "@typescript-eslint/eslint-plugin": "^5.30.0",
+    "@typescript-eslint/parser": "^5.30.0",
     "concurrently": "^4.1.2",
-    "deepmerge": "^4.2.2",
     "es-dev-server": "^1.5.0",
-    "eslint": "^6.8.0",
+    "eslint": "^8.18.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-lit-a11y": "^2.2.0",
+    "eslint-plugin-wc": "^1.3.2",
     "gulp": "^4.0.2",
     "husky": "^1.0.0",
+    "karma": "^6.4.0",
     "karma-coverage": "^2.0.1",
     "lint-staged": "^8.0.0",
+    "mocha": "^10.0.0",
     "polymer-cli": "^1.9.11",
-    "typescript": "^3.8.3"
+    "typescript": "^4.7.4",
+    "webpack-merge": "^4.1.5"
   },
   "eslintConfig": {
     "extends": [
