--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "dependencies": {
     "polymer-cli": "^1.9.11"
   },
-  "name": "iaux",
+  "name": "@internetarchive/iaux",
   "license": "AGPL-3.0-only",
   "devDependencies": {
     "eslint": "^5.12.0",
@@ -12,5 +12,6 @@
     "eslint-plugin-jest": "^22.1.3",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.12.3"
-  }
+  },
+  "type": "module"
 }
