presently master [sic] not main.  better Actions name

--- a/.github/workflows/icons.yml
+++ b/.github/workflows/icons.yml
@@ -1,10 +1,10 @@
-name: App CI
+name: Icons CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [ master ]
   pull_request:
-    branches: [ main ]
+    branches: [ master ]
 
 jobs:
   build:
