--- a/packages/ia-pic-uploader/package.json
+++ b/packages/ia-pic-uploader/package.json
@@ -8,7 +8,7 @@
   "module": "index.js",
   "scripts": {
     "start": "tsc && concurrently -k -r \"tsc --watch --preserveWatchOutput\" \"wds\"",
-    "prepare": "rimraf dist && tsc && husky install",
+    "prepare": "rimraf dist && tsc",
     "build": "tsc",
     "lint": "eslint --ext .ts,.html . --ignore-path .gitignore && prettier \"**/*.ts\" --check --ignore-path .gitignore",
     "format": "eslint --ext .ts,.html . --fix --ignore-path .gitignore && prettier \"**/*.ts\" --write --ignore-path .gitignore",
@@ -38,7 +38,6 @@
     "eslint-plugin-no-only-tests": "^3.1.0",
     "eslint-plugin-wc": "^1.3.2",
     "gh-pages": "^5.0.0",
-    "husky": "^8.0.0",
     "madge": "^6.0.0",
     "prettier": "^2.7.1",
     "rimraf": "^4.0.0",
