Clean up changes

--- a/packages/ia-pic-uploader/tsconfig.json
+++ b/packages/ia-pic-uploader/tsconfig.json
@@ -16,6 +16,7 @@
     "rootDir": "./",
     "declaration": true,
     "importsNotUsedAsValues": "remove",
+    "skipLibCheck": true,
     "plugins": [
       {
         "name": "ts-lit-plugin"
