--- a/packages/ia-pic-uploader/package.json
+++ b/packages/ia-pic-uploader/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@internetarchive/ia-pic-uploader",
-  "version": "0.0.1-alpha18",
+  "version": "0.0.1-alpha21",
   "description": "A Web Component for Picture upload.",
   "license": "AGPL-3.0-only",
   "author": "Internet Archive",
@@ -26,6 +26,8 @@
     "@open-wc/testing": "^3.1.6",
     "@typescript-eslint/eslint-plugin": "^5.30.0",
     "@typescript-eslint/parser": "^5.30.0",
+    "@types/express": "^4.17.9",
+    "@types/express-serve-static-core": "^4.17.21",
     "@web/dev-server": "^0.1.32",
     "@web/test-runner": "^0.15.0",
     "concurrently": "^7.2.2",
@@ -92,7 +94,7 @@
     ]
   },
   "dependencies": {
-    "@internetarchive/ia-activity-indicator": "^0.0.4",
+    "@internetarchive/ia-activity-indicator": "^0.0.5",
     "lit": "^2.7.4"
   }
 }
