--- a/packages/ia-pic-uploader/package.json
+++ b/packages/ia-pic-uploader/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@internetarchive/ia-pic-uploader",
-  "version": "0.1.0",
+  "version": "0.0.1-alpha43",
   "description": "A Web Component for Picture upload.",
   "license": "AGPL-3.0-only",
   "author": "Internet Archive",
