Publisned initial version of settings modal

--- a/packages/iaux-userlist-settings/package.json
+++ b/packages/iaux-userlist-settings/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@internetarchive/iaux-userlist-settings",
+  "name": "@internetarchive/ia-userlist-settings",
   "description": "Typescript component to add/edit user lists",
   "repository": {
     "type": "git",
@@ -7,7 +7,7 @@
   },
   "license": "AGPL-3.0-only",
   "author": "Internet Archive",
-  "version": "0.0.1-alpha1",
+  "version": "0.0.1",
   "main": "dist/index.js",
   "module": "dist/index.js",
   "scripts": {
