--- a/packages/iaux-userlist-settings/package.json
+++ b/packages/iaux-userlist-settings/package.json
@@ -7,7 +7,7 @@
   },
   "license": "AGPL-3.0-only",
   "author": "Internet Archive",
-  "version": "1.0.1",
+  "version": "1.0.1-alpha1",
   "main": "dist/index.js",
   "module": "dist/index.js",
   "scripts": {
