--- a/packages/ia-userlist-settings/package.json
+++ b/packages/ia-userlist-settings/package.json
@@ -92,6 +92,9 @@
   },
   "dependencies": {
     "@internetarchive/modal-manager": "^0.2.12",
+    "@internetarchive/result-type": "^0.0.1",
+    "@internetarchive/search-service": "^1.2.3",
+    "@internetarchive/user-service": "^0.1.3",
     "lit": "^2.6.0",
     "lit-element": "^3.3.3"
   }
