migrating towards new layout consensus

--- a/.github/workflows/icons.yml
+++ b/.github/workflows/icons.yml
@@ -11,15 +11,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - uses: actions/setup-node@v1
       with:
         node-version: 19.x
 
     - name: Install dependencies
-      working-directory: packages/ia-icon
+      working-directory: ui/icon
       run: npm install
 
     - name: Run tests
-      working-directory: packages/ia-icon
+      working-directory: ui/icon
       run: npx eslint
