--- a/ui/icon/package.json
+++ b/ui/icon/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "@internetarchive/ia-icons",
+  "name": "ia/icon",
+  "version": "0.0.1",
   "type": "module",
   "license": "AGPL-3.0-only",
   "devDependencies": {
