trying shorter publish urls

--- a/ui/icon/package.json
+++ b/ui/icon/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "@ia/icon",
+  "name": "@rxvorg/icon",
   "version": "0.0.1",
   "type": "module",
   "license": "AGPL-3.0-only",
+  "publishConfig": {
+    "access": "public"
+  },
   "devDependencies": {
     "eslint": "^7.4.0",
     "eslint-config-airbnb-base": "^15.0.0",
