3 more icons in use in the wild.  export all icons for top-level package import url option.  more test/demo pages, more dox.

--- a/ui/icon/package.json
+++ b/ui/icon/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "lint": "npx eslint .",
-    "prepublish": "npm run lint  &&  cp src/*.js .",
+    "build": "./bin/build.sh",
+    "prepublish": "npm run build  &&  npm run lint  &&  cp src/*.js .",
     "postpublish": "rm *.js"
   },
   "devDependencies": {
