--- a/packages/ia-userlist-settings/package.json
+++ b/packages/ia-userlist-settings/package.json
@@ -23,7 +23,7 @@
   },
   "types": "dist/index.d.ts",
   "dependencies": {
-    "@internetarchive/modal-manager": "^0.2.12",
+    "internetarchive-modal-manager": "0.3.1-alpha.0",
     "@internetarchive/result-type": "^0.0.1",
     "@internetarchive/search-service": "^1.3.1",
     "@internetarchive/user-service": "^0.1.3",
