--- a/packages/ia-userlist-settings/package.json
+++ b/packages/ia-userlist-settings/package.json
@@ -7,7 +7,7 @@
   },
   "license": "AGPL-3.0-only",
   "author": "Internet Archive",
-  "version": "1.0.14",
+  "version": "1.0.15-alpha.0",
   "main": "dist/index.js",
   "module": "dist/index.js",
   "scripts": {
@@ -23,7 +23,7 @@
   },
   "types": "dist/index.d.ts",
   "dependencies": {
-    "@internetarchive/modal-manager": "^0.3.4",
+    "@internetarchive/modal-manager": "0.9.1-alpha.0",
     "@internetarchive/result-type": "^0.0.1",
     "@internetarchive/search-service": "^1.3.1",
     "@internetarchive/user-service": "^0.1.3",
