--- a/packages/ia-userlist-settings/package.json
+++ b/packages/ia-userlist-settings/package.json
@@ -7,7 +7,7 @@
   },
   "license": "AGPL-3.0-only",
   "author": "Internet Archive",
-  "version": "1.0.21",
+  "version": "1.0.22",
   "main": "dist/index.js",
   "module": "dist/index.js",
   "scripts": {
@@ -23,7 +23,7 @@
   },
   "types": "dist/index.d.ts",
   "dependencies": {
-    "@internetarchive/modal-manager": "2.0.0",
+    "@internetarchive/modal-manager": "^2.0.0",
     "@internetarchive/result-type": "^0.0.1",
     "@internetarchive/search-service": "^1.4.1",
     "@internetarchive/user-service": "^0.1.3",
